# programming-languages

./: README.md
assignment-1-io-library/: lib.inc
assignment-2-dictionary/: colon.inc  dict.asm  dict.inc  lib.asm  lib.inc  main.asm  makefile  words.inc
assignment-3-image-rotation/: .gitignore  .gitlab-ci.yml  README.md
assignment-3-image-rotation/solution/: CMakeLists.txt
assignment-3-image-rotation/solution/include/: angle.h  bmp.h  bmp_errors.h  image.h  transform.h
assignment-3-image-rotation/solution/src/: angle.c  bmp.c  bmp_errors.c  image.c  main.c  transform.c
assignment-4-memory-allocator/: .gitignore  .gitlab-ci.yml
assignment-4-memory-allocator/src/: main.c  mem.c  mem.h
